feat: Add services, controllers, routes, API for product, review, logs
